[tool.poetry]
name = "Python Project Template"
version = "0.1.0"
description = ""
authors = ["jimmfan <jimmfan@github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]